# stock_scoring

./: README.md  main.py  pyproject.toml  requirements.txt
indicators/: average_directional_index.py  bollinger_bands.py  ma.py  macd.py  stochastic_oscillator.py  stochastic_rsi.py
src/: fundamental_score.py  get_data_for_scoring_yfinance.py  scores.py
