[tool.poetry]
name = "stock-scoring"
version = "0.1.0"
description = ""
authors = ["shubhammandowara <shubham77mandowara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.52"
streamlit = "^1.41.1"
pandas = "^2.2.3"
plotly = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
